Enhance admin dashboard with program and curriculum management features; add routing, API integration, and UI components for creating and editing programs and curricula

--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -57,5 +57,79 @@
   "departmentNotFound": "Department not found",
   "errorLoadDepartment": "Could not load department",
   "dataNotLoaded": "Data not loaded",
-  "errorDelete": "Delete error ({{status}})"
+  "errorDelete": "Delete error ({{status}})",
+  "menuProgramsAndCurricula": "Programs & Curricula",
+  "programManagement": "Programs and Curricula",
+  "programSubtitle": "Manage educational programs. Curricula will be added here.",
+  "programSearch": "Search programs...",
+  "programCreate": "Create Program",
+  "programNoPrograms": "No programs",
+  "programAdd": "+ Add program",
+  "programDegreeLevel": "Degree level",
+  "programDepartment": "Department",
+  "programDepartmentNone": "— None —",
+  "programCreatePageTitle": "Create Program",
+  "programCodeRequired": "Code *",
+  "programNameRequired": "Name *",
+  "programCodePlaceholder": "e.g. CS-BS",
+  "programDegreeLevelPlaceholder": "e.g. Bachelor",
+  "programCreating": "Creating…",
+  "programErrorCodeRequired": "Code is required",
+  "programErrorNameRequired": "Name is required",
+  "programErrorCodeExists": "A program with this code already exists",
+  "programErrorValidation": "Please check the fields and fix errors.",
+  "programErrorDepartmentNotFound": "Selected department was not found. Please refresh the list.",
+  "programErrorForbidden": "You do not have permission to perform this action.",
+  "programErrorUnauthorized": "Please sign in.",
+  "programErrorLoadList": "Could not load programs",
+  "programErrorCreate": "Error creating program",
+  "programErrorInvalidData": "Invalid data",
+  "programEditPageTitle": "Edit Program",
+  "programViewPageTitle": "Program: {{name}}",
+  "programBackToList": "Back to list",
+  "programNotFoundOrDeleted": "Program not found or has been deleted.",
+  "programErrorLoad": "Could not load program",
+  "programErrorUpdate": "Error updating program",
+  "programSuccessDeleted": "Program deleted",
+  "programDeleteConfirmTitle": "Delete program?",
+  "programDeleteConfirmText": "This action cannot be undone.",
+  "programErrorDelete": "Delete error ({{status}})",
+  "programUpdatedAt": "Updated At",
+  "curriculumSectionTitle": "Curricula",
+  "curriculumSectionSubtitle": "All curricula by program. Select a program and click Add to create.",
+  "curriculumSearchPlaceholder": "Search curricula by program, version...",
+  "curriculumSelectProgram": "Select program",
+  "curriculumProgram": "Program",
+  "curriculumNoCurriculaOnPage": "No curricula yet",
+  "curriculumAddHint": "Select a program above and click «Add curriculum» to create one.",
+  "curriculumSuccessDeleted": "Curriculum deleted",
+  "curriculumAdd": "Add curriculum",
+  "curriculumNoCurricula": "No curricula for this program",
+  "curriculumVersion": "Version",
+  "curriculumStartYear": "Start year",
+  "curriculumIsActive": "Active",
+  "curriculumActiveYes": "Yes",
+  "curriculumActiveNo": "No",
+  "curriculumNotes": "Notes",
+  "curriculumCreatePageTitle": "Create curriculum",
+  "curriculumVersionRequired": "Version *",
+  "curriculumStartYearRequired": "Start year *",
+  "curriculumVersionPlaceholder": "e.g. 2024",
+  "curriculumNotesPlaceholder": "Optional notes",
+  "curriculumCreating": "Creating…",
+  "curriculumErrorVersionRequired": "Version is required",
+  "curriculumErrorStartYearRange": "Start year must be between 1900 and 2100",
+  "curriculumErrorVersionExists": "A curriculum with this version already exists for this program",
+  "curriculumErrorValidation": "Please check the fields and fix errors.",
+  "curriculumErrorProgramNotFound": "Program not found. Please go back to the program list.",
+  "curriculumErrorLoadList": "Could not load curricula",
+  "curriculumErrorCreate": "Error creating curriculum",
+  "curriculumEditPageTitle": "Edit curriculum",
+  "curriculumErrorLoad": "Could not load curriculum",
+  "curriculumErrorUpdate": "Error updating curriculum",
+  "curriculumBackToProgram": "Back to program",
+  "curriculumNotFoundOrDeleted": "Curriculum not found or has been deleted.",
+  "curriculumDeleteConfirmTitle": "Delete curriculum?",
+  "curriculumDeleteConfirmText": "This action cannot be undone.",
+  "curriculumErrorDelete": "Delete error ({{status}})"
 }
