--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -57,5 +57,79 @@
   "departmentNotFound": "Отдел не найден",
   "errorLoadDepartment": "Не удалось загрузить отдел",
   "dataNotLoaded": "Данные не загружены",
-  "errorDelete": "Ошибка удаления ({{status}})"
+  "errorDelete": "Ошибка удаления ({{status}})",
+  "menuProgramsAndCurricula": "Программы и учебные планы",
+  "programManagement": "Программы и учебные планы",
+  "programSubtitle": "Управление образовательными программами. Учебные планы будут добавлены сюда.",
+  "programSearch": "Поиск программ...",
+  "programCreate": "Создать программу",
+  "programNoPrograms": "Нет программ",
+  "programAdd": "+ Добавить программу",
+  "programDegreeLevel": "Уровень степени",
+  "programDepartment": "Кафедра",
+  "programDepartmentNone": "— Нет —",
+  "programCreatePageTitle": "Создать программу",
+  "programCodeRequired": "Код *",
+  "programNameRequired": "Название *",
+  "programCodePlaceholder": "напр. CS-BS",
+  "programDegreeLevelPlaceholder": "напр. Бакалавр",
+  "programCreating": "Создание…",
+  "programErrorCodeRequired": "Код обязателен",
+  "programErrorNameRequired": "Название обязательно",
+  "programErrorCodeExists": "Программа с таким кодом уже существует",
+  "programErrorValidation": "Проверьте заполненные поля и исправьте ошибки.",
+  "programErrorDepartmentNotFound": "Выбранная кафедра не найдена. Обновите список.",
+  "programErrorForbidden": "Недостаточно прав для выполнения этого действия.",
+  "programErrorUnauthorized": "Требуется вход в систему.",
+  "programErrorLoadList": "Не удалось загрузить список программ",
+  "programErrorCreate": "Ошибка создания программы",
+  "programErrorInvalidData": "Неверные данные",
+  "programEditPageTitle": "Редактировать программу",
+  "programViewPageTitle": "Программа: {{name}}",
+  "programBackToList": "К списку программ",
+  "programNotFoundOrDeleted": "Программа не найдена или удалена.",
+  "programErrorLoad": "Не удалось загрузить программу",
+  "programErrorUpdate": "Ошибка обновления программы",
+  "programSuccessDeleted": "Программа удалена",
+  "programDeleteConfirmTitle": "Удалить программу?",
+  "programDeleteConfirmText": "Это действие нельзя отменить.",
+  "programErrorDelete": "Ошибка удаления ({{status}})",
+  "programUpdatedAt": "Дата обновления",
+  "curriculumSectionTitle": "Учебные планы",
+  "curriculumSectionSubtitle": "Все учебные планы по программам. Выберите программу и нажмите «Добавить».",
+  "curriculumSearchPlaceholder": "Поиск по программе, версии...",
+  "curriculumSelectProgram": "Выберите программу",
+  "curriculumProgram": "Программа",
+  "curriculumNoCurriculaOnPage": "Учебных планов пока нет",
+  "curriculumAddHint": "Выберите программу выше и нажмите «Добавить учебный план».",
+  "curriculumSuccessDeleted": "Учебный план удалён",
+  "curriculumAdd": "Добавить учебный план",
+  "curriculumNoCurricula": "Нет учебных планов по этой программе",
+  "curriculumVersion": "Версия",
+  "curriculumStartYear": "Год начала",
+  "curriculumIsActive": "Активен",
+  "curriculumActiveYes": "Да",
+  "curriculumActiveNo": "Нет",
+  "curriculumNotes": "Заметки",
+  "curriculumCreatePageTitle": "Создать учебный план",
+  "curriculumVersionRequired": "Версия *",
+  "curriculumStartYearRequired": "Год начала *",
+  "curriculumVersionPlaceholder": "напр. 2024",
+  "curriculumNotesPlaceholder": "Необязательные заметки",
+  "curriculumCreating": "Создание…",
+  "curriculumErrorVersionRequired": "Версия обязательна",
+  "curriculumErrorStartYearRange": "Год начала должен быть от 1900 до 2100",
+  "curriculumErrorVersionExists": "Учебный план с такой версией уже существует для этой программы",
+  "curriculumErrorValidation": "Проверьте заполненные поля и исправьте ошибки.",
+  "curriculumErrorProgramNotFound": "Программа не найдена. Вернитесь к списку программ.",
+  "curriculumErrorLoadList": "Не удалось загрузить учебные планы",
+  "curriculumErrorCreate": "Ошибка создания учебного плана",
+  "curriculumEditPageTitle": "Редактировать учебный план",
+  "curriculumErrorLoad": "Не удалось загрузить учебный план",
+  "curriculumErrorUpdate": "Ошибка обновления учебного плана",
+  "curriculumBackToProgram": "К программе",
+  "curriculumNotFoundOrDeleted": "Учебный план не найден или удалён.",
+  "curriculumDeleteConfirmTitle": "Удалить учебный план?",
+  "curriculumDeleteConfirmText": "Это действие нельзя отменить.",
+  "curriculumErrorDelete": "Ошибка удаления ({{status}})"
 }
