--- a/src/shared/i18n/locales/ru/invite.json
+++ b/src/shared/i18n/locales/ru/invite.json
@@ -6,6 +6,7 @@
   "validationError": "Ошибка валидации",
   "goToLogin": "Перейти к входу",
   "invalidLink": "Ссылка недействительна. Проверьте ссылку или запросите новое приглашение.",
+  "invalidOrAlreadyUsed": "Ссылка приглашения недействительна или уже использована. Вы можете войти в систему.",
   "expired": "Срок действия приглашения истёк. Обратитесь к администратору за новым приглашением.",
   "cancelled": "Приглашение отозвано. Обратитесь к администратору.",
   "alreadyAccepted": "Это приглашение уже было использовано. Вы можете войти в систему.",
