--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -57,5 +57,79 @@
   "departmentNotFound": "部门未找到",
   "errorLoadDepartment": "无法加载部门",
   "dataNotLoaded": "数据未加载",
-  "errorDelete": "删除失败 ({{status}})"
+  "errorDelete": "删除失败 ({{status}})",
+  "menuProgramsAndCurricula": "项目与教学计划",
+  "programManagement": "项目与教学计划",
+  "programSubtitle": "管理教育项目。教学计划将在此添加。",
+  "programSearch": "搜索项目...",
+  "programCreate": "新建项目",
+  "programNoPrograms": "暂无项目",
+  "programAdd": "+ 添加项目",
+  "programDegreeLevel": "学位级别",
+  "programDepartment": "院系",
+  "programDepartmentNone": "— 无 —",
+  "programCreatePageTitle": "新建项目",
+  "programCodeRequired": "代码 *",
+  "programNameRequired": "名称 *",
+  "programCodePlaceholder": "如 CS-BS",
+  "programDegreeLevelPlaceholder": "如 学士",
+  "programCreating": "创建中…",
+  "programErrorCodeRequired": "代码必填",
+  "programErrorNameRequired": "名称必填",
+  "programErrorCodeExists": "该代码的项目已存在",
+  "programErrorValidation": "请检查并修正填写错误。",
+  "programErrorDepartmentNotFound": "所选院系未找到。请刷新列表。",
+  "programErrorForbidden": "您没有执行此操作的权限。",
+  "programErrorUnauthorized": "请登录。",
+  "programErrorLoadList": "无法加载项目列表",
+  "programErrorCreate": "创建项目失败",
+  "programErrorInvalidData": "数据无效",
+  "programEditPageTitle": "编辑项目",
+  "programViewPageTitle": "项目：{{name}}",
+  "programBackToList": "返回列表",
+  "programNotFoundOrDeleted": "项目未找到或已删除。",
+  "programErrorLoad": "无法加载项目",
+  "programErrorUpdate": "更新项目失败",
+  "programSuccessDeleted": "项目已删除",
+  "programDeleteConfirmTitle": "删除项目？",
+  "programDeleteConfirmText": "此操作不可撤销。",
+  "programErrorDelete": "删除失败 ({{status}})",
+  "programUpdatedAt": "更新时间",
+  "curriculumSectionTitle": "教学计划",
+  "curriculumSectionSubtitle": "按项目显示的教学计划。选择项目后点击「添加」。",
+  "curriculumSearchPlaceholder": "按项目、版本搜索...",
+  "curriculumSelectProgram": "选择项目",
+  "curriculumProgram": "项目",
+  "curriculumNoCurriculaOnPage": "暂无教学计划",
+  "curriculumAddHint": "请在上方选择项目并点击「添加教学计划」。",
+  "curriculumSuccessDeleted": "教学计划已删除",
+  "curriculumAdd": "添加教学计划",
+  "curriculumNoCurricula": "该项目暂无教学计划",
+  "curriculumVersion": "版本",
+  "curriculumStartYear": "起始年份",
+  "curriculumIsActive": "启用",
+  "curriculumActiveYes": "是",
+  "curriculumActiveNo": "否",
+  "curriculumNotes": "备注",
+  "curriculumCreatePageTitle": "新建教学计划",
+  "curriculumVersionRequired": "版本 *",
+  "curriculumStartYearRequired": "起始年份 *",
+  "curriculumVersionPlaceholder": "如 2024",
+  "curriculumNotesPlaceholder": "可选备注",
+  "curriculumCreating": "创建中…",
+  "curriculumErrorVersionRequired": "版本必填",
+  "curriculumErrorStartYearRange": "起始年份须在 1900–2100 之间",
+  "curriculumErrorVersionExists": "该项目已存在相同版本的教学计划",
+  "curriculumErrorValidation": "请检查并修正填写错误。",
+  "curriculumErrorProgramNotFound": "未找到项目。请返回项目列表。",
+  "curriculumErrorLoadList": "无法加载教学计划列表",
+  "curriculumErrorCreate": "创建教学计划失败",
+  "curriculumEditPageTitle": "编辑教学计划",
+  "curriculumErrorLoad": "无法加载教学计划",
+  "curriculumErrorUpdate": "更新教学计划失败",
+  "curriculumBackToProgram": "返回项目",
+  "curriculumNotFoundOrDeleted": "教学计划未找到或已删除。",
+  "curriculumDeleteConfirmTitle": "删除教学计划？",
+  "curriculumDeleteConfirmText": "此操作不可撤销。",
+  "curriculumErrorDelete": "删除失败 ({{status}})"
 }
