Implement invitation management features in admin dashboard; add routing, hooks for permissions, and enhance UI for login and invite pages

--- a/src/shared/i18n/locales/en/auth.json
+++ b/src/shared/i18n/locales/en/auth.json
@@ -1,10 +1,21 @@
 {
-  "title": "Sign in",
+  "title": "Neusoft University",
+  "loginSubtitle": "Login to Student Portal",
   "email": "Email",
   "password": "Password",
-  "submit": "Sign in",
+  "passwordPlaceholder": "Enter your password",
+  "forgotPassword": "Forgot password?",
+  "submit": "Login",
   "submitting": "Signing in…",
   "linkInvite": "Accept invitation",
+  "demoCredentials": "Demo credentials:",
+  "demoStudent": "student@neusoft.edu.cn (Student)",
+  "demoTeacher": "teacher@neusoft.edu.cn (Teacher)",
+  "demoAdmin": "admin@neusoft.edu.cn (Admin)",
+  "demoAdminTeacher": "dr.admin@neusoft.edu.cn (Admin + Teacher)",
+  "passwordAnyValue": "Password: any value",
+  "noAccount": "Don't have an account?",
+  "contactAdmissions": "Contact admissions",
   "errorInvalidCredentials": "Invalid email or password.",
   "errorUserNotActive": "Account not activated. Check your email for the activation link. Didn't receive it? Check Spam or ask your administrator to resend the invitation.",
   "errorUserDisabled": "Account disabled. Contact your administrator.",
