--- a/src/shared/i18n/locales/en/dashboard.json
+++ b/src/shared/i18n/locales/en/dashboard.json
@@ -131,5 +131,83 @@
   "curriculumNotFoundOrDeleted": "Curriculum not found or has been deleted.",
   "curriculumDeleteConfirmTitle": "Delete curriculum?",
   "curriculumDeleteConfirmText": "This action cannot be undone.",
-  "curriculumErrorDelete": "Delete error ({{status}})"
+  "curriculumErrorDelete": "Delete error ({{status}})",
+  "viewOnlyNotice": "You are signed in with view-only access. Creating and editing data is not available for your role.",
+  "actionUnavailableForRole": "This action is not available for your role. Only viewing is allowed.",
+  "menuInvitations": "Invitations",
+  "invitationManagement": "Invitation Management",
+  "invitationSubtitle": "View and manage user invitations. Only administrators can create, resend, or cancel.",
+  "invitationViewOnlyHint": "You can only view invitations. Creating, resending, and cancelling require Administrator or Super Administrator role.",
+  "invitationCreate": "Create Invitation",
+  "invitationSearch": "Search by email, name...",
+  "invitationNoInvitations": "No invitations",
+  "invitationAdd": "+ Create invitation",
+  "invitationEmail": "Email",
+  "invitationRoles": "Roles",
+  "invitationStatus": "Status",
+  "invitationExpiresAt": "Expires",
+  "invitationCreatedAt": "Created",
+  "invitationResend": "Resend",
+  "invitationCancel": "Cancel",
+  "invitationResendConfirmTitle": "Resend invitation?",
+  "invitationResendConfirmText": "A new email with an activation link will be sent to the invitee.",
+  "invitationCancelConfirmTitle": "Cancel invitation?",
+  "invitationCancelConfirmText": "The invitation will be cancelled and the user account disabled. This cannot be undone.",
+  "invitationSuccessResent": "Invitation email resent",
+  "invitationSuccessCancelled": "Invitation cancelled",
+  "invitationErrorResend": "Could not resend ({{message}})",
+  "invitationErrorCancel": "Could not cancel ({{message}})",
+  "invitationErrorCreate": "Could not create invitation",
+  "invitationErrorLoadList": "Could not load invitations",
+  "invitationErrorLoad": "Could not load invitation",
+  "invitationNotFound": "Invitation not found",
+  "invitationCreatePageTitle": "Create Invitation",
+  "invitationViewPageTitle": "Invitation",
+  "invitationEmailRequired": "Email *",
+  "invitationRoleRequired": "Role *",
+  "invitationFirstName": "First name",
+  "invitationLastName": "Last name",
+  "invitationPhone": "Phone",
+  "invitationBirthDate": "Birth date",
+  "invitationStudentData": "Student data",
+  "invitationTeacherData": "Teacher data",
+  "invitationStudentId": "Student ID *",
+  "invitationChineseName": "Chinese name",
+  "invitationFaculty": "Faculty *",
+  "invitationCourse": "Course",
+  "invitationEnrollmentYear": "Enrollment year",
+  "invitationGroupName": "Group",
+  "invitationTeacherId": "Teacher ID *",
+  "invitationEnglishName": "English name",
+  "invitationPosition": "Position",
+  "invitationCreating": "Creating…",
+  "invitationStatusPending": "Pending",
+  "invitationStatusSending": "Sending",
+  "invitationStatusSent": "Sent",
+  "invitationStatusFailed": "Failed",
+  "invitationStatusAccepted": "Accepted",
+  "invitationStatusExpired": "Expired",
+  "invitationStatusCancelled": "Cancelled",
+  "invitationFilterAll": "All",
+  "invitationNoPermissionCreate": "Creating invitations requires Administrator or Super Administrator role.",
+  "invitationNoPermissionResend": "Resending requires Administrator or Super Administrator role.",
+  "invitationNoPermissionCancel": "Cancelling requires Administrator or Super Administrator role.",
+  "invitationEmailSentAt": "Email sent at",
+  "invitationEmailAttempts": "Send attempts",
+  "invitationAcceptedAt": "Accepted at",
+  "invitationInvitedBy": "Invited by",
+  "roleStudent": "Student",
+  "roleTeacher": "Teacher",
+  "roleStaff": "Staff",
+  "roleModerator": "Moderator",
+  "roleAdmin": "Administrator",
+  "roleSuperAdmin": "Super Administrator",
+  "invitationAddRole": "Add role",
+  "invitationRemoveRole": "Remove role",
+  "invitationRolesHint": "Up to 3 roles. Only one managing role (Staff, Moderator, Administrator, Super Administrator). Student and Teacher can be combined with any role.",
+  "invitationRolesMax": "Maximum 3 roles.",
+  "invitationAtLeastOneRole": "Add at least one role.",
+  "invitationRoleAlreadyAdded": "This role is already added.",
+  "dateFormat": "Date",
+  "timeFormat": "Time"
 }
