--- a/src/shared/i18n/locales/en/invite.json
+++ b/src/shared/i18n/locales/en/invite.json
@@ -11,8 +11,10 @@
   "cancelled": "Invitation was cancelled. Contact your administrator.",
   "alreadyAccepted": "This invitation was already used. You can sign in.",
   "unavailable": "Invitation unavailable. Contact your administrator.",
-  "tokenRegenerated": "The link has expired. A new email with a new link was sent to {{email}}. Check your inbox and use the new link.",
-  "tokenRegeneratedNoEmail": "The link has expired. A new invitation email has been sent. Check your inbox and use the new link.",
+  "tokenRegenerated": "A new email with a new link was sent to {{email}}. Check your inbox (and spam folder) and use the new link.",
+  "tokenRegeneratedNoEmail": "A new invitation email has been sent. Check your inbox (and spam folder) and use the new link.",
+  "emailSentAgainTitle": "New invitation email sent",
+  "emailSentAgainLead": "The link you used has expired. We have sent a new invitation email.",
   "title": "Accept invitation",
   "hello": "Hello, {{name}}.",
   "emailLabel": "Email",
