--- a/src/shared/i18n/locales/ru/auth.json
+++ b/src/shared/i18n/locales/ru/auth.json
@@ -1,10 +1,21 @@
 {
-  "title": "Вход",
+  "title": "Neusoft University",
+  "loginSubtitle": "Вход в студенческий портал",
   "email": "Email",
   "password": "Пароль",
+  "passwordPlaceholder": "Введите пароль",
+  "forgotPassword": "Забыли пароль?",
   "submit": "Войти",
   "submitting": "Вход…",
   "linkInvite": "Принять приглашение",
+  "demoCredentials": "Демо-учётные данные:",
+  "demoStudent": "student@neusoft.edu.cn (Студент)",
+  "demoTeacher": "teacher@neusoft.edu.cn (Преподаватель)",
+  "demoAdmin": "admin@neusoft.edu.cn (Администратор)",
+  "demoAdminTeacher": "dr.admin@neusoft.edu.cn (Админ + Преподаватель)",
+  "passwordAnyValue": "Пароль: любое значение",
+  "noAccount": "Нет аккаунта?",
+  "contactAdmissions": "Связаться с приёмной",
   "errorInvalidCredentials": "Неверный email или пароль.",
   "errorUserNotActive": "Аккаунт не активирован. Проверьте почту — там ссылка для активации. Не пришло письмо? Проверьте папку «Спам» или обратитесь к администратору для повторной отправки приглашения.",
   "errorUserDisabled": "Аккаунт отключён. Обратитесь к администратору.",
