--- a/src/shared/i18n/locales/ru/dashboard.json
+++ b/src/shared/i18n/locales/ru/dashboard.json
@@ -131,5 +131,83 @@
   "curriculumNotFoundOrDeleted": "Учебный план не найден или удалён.",
   "curriculumDeleteConfirmTitle": "Удалить учебный план?",
   "curriculumDeleteConfirmText": "Это действие нельзя отменить.",
-  "curriculumErrorDelete": "Ошибка удаления ({{status}})"
+  "curriculumErrorDelete": "Ошибка удаления ({{status}})",
+  "viewOnlyNotice": "Вы вошли с правами только на просмотр. Создание и изменение данных недоступно для вашей роли.",
+  "actionUnavailableForRole": "Это действие недоступно для вашей роли. Доступен только просмотр.",
+  "menuInvitations": "Приглашения",
+  "invitationManagement": "Управление приглашениями",
+  "invitationSubtitle": "Просмотр и управление приглашениями пользователей. Создавать, переотправлять и отменять могут только администраторы.",
+  "invitationViewOnlyHint": "Вам доступен только просмотр приглашений. Создание, переотправка и отмена требуют роли Администратор или Суперадминистратор.",
+  "invitationCreate": "Создать приглашение",
+  "invitationSearch": "Поиск по email, имени...",
+  "invitationNoInvitations": "Нет приглашений",
+  "invitationAdd": "+ Создать приглашение",
+  "invitationEmail": "Email",
+  "invitationRoles": "Роли",
+  "invitationStatus": "Статус",
+  "invitationExpiresAt": "Истекает",
+  "invitationCreatedAt": "Создано",
+  "invitationResend": "Переотправить",
+  "invitationCancel": "Отменить",
+  "invitationResendConfirmTitle": "Переотправить приглашение?",
+  "invitationResendConfirmText": "На почту приглашаемого будет отправлено новое письмо со ссылкой для активации.",
+  "invitationCancelConfirmTitle": "Отменить приглашение?",
+  "invitationCancelConfirmText": "Приглашение будет отменено, учётная запись отключена. Это нельзя отменить.",
+  "invitationSuccessResent": "Письмо с приглашением переотправлено",
+  "invitationSuccessCancelled": "Приглашение отменено",
+  "invitationErrorResend": "Не удалось переотправить ({{message}})",
+  "invitationErrorCancel": "Не удалось отменить ({{message}})",
+  "invitationErrorCreate": "Не удалось создать приглашение",
+  "invitationErrorLoadList": "Не удалось загрузить приглашения",
+  "invitationErrorLoad": "Не удалось загрузить приглашение",
+  "invitationNotFound": "Приглашение не найдено",
+  "invitationCreatePageTitle": "Создать приглашение",
+  "invitationViewPageTitle": "Приглашение",
+  "invitationEmailRequired": "Email *",
+  "invitationRoleRequired": "Роль *",
+  "invitationFirstName": "Имя",
+  "invitationLastName": "Фамилия",
+  "invitationPhone": "Телефон",
+  "invitationBirthDate": "Дата рождения",
+  "invitationStudentData": "Данные студента",
+  "invitationTeacherData": "Данные преподавателя",
+  "invitationStudentId": "Номер студента *",
+  "invitationChineseName": "Имя на китайском",
+  "invitationFaculty": "Факультет *",
+  "invitationCourse": "Курс",
+  "invitationEnrollmentYear": "Год поступления",
+  "invitationGroupName": "Группа",
+  "invitationTeacherId": "Номер преподавателя *",
+  "invitationEnglishName": "Имя на английском",
+  "invitationPosition": "Должность",
+  "invitationCreating": "Создание…",
+  "invitationStatusPending": "Ожидает",
+  "invitationStatusSending": "Отправляется",
+  "invitationStatusSent": "Отправлено",
+  "invitationStatusFailed": "Ошибка отправки",
+  "invitationStatusAccepted": "Принято",
+  "invitationStatusExpired": "Истекло",
+  "invitationStatusCancelled": "Отменено",
+  "invitationFilterAll": "Все",
+  "invitationNoPermissionCreate": "Создание приглашений доступно только ролям Администратор или Суперадминистратор.",
+  "invitationNoPermissionResend": "Переотправка доступна только ролям Администратор или Суперадминистратор.",
+  "invitationNoPermissionCancel": "Отмена доступна только ролям Администратор или Суперадминистратор.",
+  "invitationEmailSentAt": "Письмо отправлено",
+  "invitationEmailAttempts": "Попыток отправки",
+  "invitationAcceptedAt": "Принято",
+  "invitationInvitedBy": "Пригласил",
+  "roleStudent": "Студент",
+  "roleTeacher": "Преподаватель",
+  "roleStaff": "Сотрудник",
+  "roleModerator": "Модератор",
+  "roleAdmin": "Администратор",
+  "roleSuperAdmin": "Супер-администратор",
+  "invitationAddRole": "Добавить роль",
+  "invitationRemoveRole": "Удалить роль",
+  "invitationRolesHint": "Не более 3 ролей. Управляющая роль только одна (Сотрудник, Модератор, Администратор, Супер-администратор). Студент и Преподаватель можно сочетать с любой ролью.",
+  "invitationRolesMax": "Максимум 3 роли.",
+  "invitationAtLeastOneRole": "Добавьте хотя бы одну роль.",
+  "invitationRoleAlreadyAdded": "Эта роль уже добавлена.",
+  "dateFormat": "Дата",
+  "timeFormat": "Время"
 }
