--- a/src/shared/i18n/locales/ru/invite.json
+++ b/src/shared/i18n/locales/ru/invite.json
@@ -11,8 +11,10 @@
   "cancelled": "Приглашение отозвано. Обратитесь к администратору.",
   "alreadyAccepted": "Это приглашение уже было использовано. Вы можете войти в систему.",
   "unavailable": "Приглашение недоступно. Обратитесь к администратору.",
-  "tokenRegenerated": "Ссылка устарела. На вашу почту ({{email}}) отправлено новое письмо со ссылкой. Проверьте почту и перейдите по новой ссылке.",
-  "tokenRegeneratedNoEmail": "Ссылка устарела. На вашу почту отправлено новое приглашение. Проверьте почту и перейдите по новой ссылке.",
+  "tokenRegenerated": "На вашу почту ({{email}}) отправлено новое письмо со ссылкой. Проверьте почту (и папку «Спам») и перейдите по новой ссылке.",
+  "tokenRegeneratedNoEmail": "На вашу почту отправлено новое приглашение. Проверьте почту (и папку «Спам») и перейдите по новой ссылке.",
+  "emailSentAgainTitle": "Новое письмо с приглашением отправлено",
+  "emailSentAgainLead": "Ссылка, по которой вы перешли, устарела. Мы отправили новое письмо с приглашением на вашу почту.",
   "title": "Принятие приглашения",
   "hello": "Здравствуйте, {{name}}.",
   "emailLabel": "Email",
