--- a/src/shared/i18n/locales/zh-Hans/dashboard.json
+++ b/src/shared/i18n/locales/zh-Hans/dashboard.json
@@ -131,5 +131,83 @@
   "curriculumNotFoundOrDeleted": "教学计划未找到或已删除。",
   "curriculumDeleteConfirmTitle": "删除教学计划？",
   "curriculumDeleteConfirmText": "此操作不可撤销。",
-  "curriculumErrorDelete": "删除失败 ({{status}})"
+  "curriculumErrorDelete": "删除失败 ({{status}})",
+  "viewOnlyNotice": "您当前仅有查看权限。创建和修改数据对您的角色不可用。",
+  "actionUnavailableForRole": "此操作对您的角色不可用。仅允许查看。",
+  "menuInvitations": "邀请",
+  "invitationManagement": "邀请管理",
+  "invitationSubtitle": "查看和管理用户邀请。仅管理员可创建、重发或取消邀请。",
+  "invitationViewOnlyHint": "您只能查看邀请。创建、重发和取消需要管理员或超级管理员角色。",
+  "invitationCreate": "创建邀请",
+  "invitationSearch": "按邮箱、姓名搜索...",
+  "invitationNoInvitations": "暂无邀请",
+  "invitationAdd": "+ 创建邀请",
+  "invitationEmail": "邮箱",
+  "invitationRoles": "角色",
+  "invitationStatus": "状态",
+  "invitationExpiresAt": "过期时间",
+  "invitationCreatedAt": "创建时间",
+  "invitationResend": "重发",
+  "invitationCancel": "取消",
+  "invitationResendConfirmTitle": "重发邀请？",
+  "invitationResendConfirmText": "将向被邀请人发送包含激活链接的新邮件。",
+  "invitationCancelConfirmTitle": "取消邀请？",
+  "invitationCancelConfirmText": "邀请将被取消，用户账户将被禁用。此操作不可撤销。",
+  "invitationSuccessResent": "邀请邮件已重发",
+  "invitationSuccessCancelled": "邀请已取消",
+  "invitationErrorResend": "重发失败 ({{message}})",
+  "invitationErrorCancel": "取消失败 ({{message}})",
+  "invitationErrorCreate": "创建邀请失败",
+  "invitationErrorLoadList": "无法加载邀请列表",
+  "invitationErrorLoad": "无法加载邀请",
+  "invitationNotFound": "邀请未找到",
+  "invitationCreatePageTitle": "创建邀请",
+  "invitationViewPageTitle": "邀请",
+  "invitationEmailRequired": "邮箱 *",
+  "invitationRoleRequired": "角色 *",
+  "invitationFirstName": "名",
+  "invitationLastName": "姓",
+  "invitationPhone": "电话",
+  "invitationBirthDate": "出生日期",
+  "invitationStudentData": "学生信息",
+  "invitationTeacherData": "教师信息",
+  "invitationStudentId": "学号 *",
+  "invitationChineseName": "中文名",
+  "invitationFaculty": "院系 *",
+  "invitationCourse": "课程",
+  "invitationEnrollmentYear": "入学年份",
+  "invitationGroupName": "班级",
+  "invitationTeacherId": "工号 *",
+  "invitationEnglishName": "英文名",
+  "invitationPosition": "职位",
+  "invitationCreating": "创建中…",
+  "invitationStatusPending": "待处理",
+  "invitationStatusSending": "发送中",
+  "invitationStatusSent": "已发送",
+  "invitationStatusFailed": "发送失败",
+  "invitationStatusAccepted": "已接受",
+  "invitationStatusExpired": "已过期",
+  "invitationStatusCancelled": "已取消",
+  "invitationFilterAll": "全部",
+  "invitationNoPermissionCreate": "创建邀请需要管理员或超级管理员角色。",
+  "invitationNoPermissionResend": "重发需要管理员或超级管理员角色。",
+  "invitationNoPermissionCancel": "取消需要管理员或超级管理员角色。",
+  "invitationEmailSentAt": "邮件发送时间",
+  "invitationEmailAttempts": "发送次数",
+  "invitationAcceptedAt": "接受时间",
+  "invitationInvitedBy": "邀请人",
+  "roleStudent": "学生",
+  "roleTeacher": "教师",
+  "roleStaff": "职员",
+  "roleModerator": "版主",
+  "roleAdmin": "管理员",
+  "roleSuperAdmin": "超级管理员",
+  "invitationAddRole": "添加角色",
+  "invitationRemoveRole": "移除角色",
+  "invitationRolesHint": "最多 3 个角色。管理角色只能选一个（职员、版主、管理员、超级管理员）。学生和教师可与任意角色组合。",
+  "invitationRolesMax": "最多 3 个角色。",
+  "invitationAtLeastOneRole": "请至少添加一个角色。",
+  "invitationRoleAlreadyAdded": "该角色已添加。",
+  "dateFormat": "日期",
+  "timeFormat": "时间"
 }
