--- a/src/shared/i18n/locales/zh-Hans/invite.json
+++ b/src/shared/i18n/locales/zh-Hans/invite.json
@@ -11,8 +11,10 @@
   "cancelled": "邀请已取消。请联系管理员。",
   "alreadyAccepted": "此邀请已使用。您可以登录。",
   "unavailable": "邀请不可用。请联系管理员。",
-  "tokenRegenerated": "链接已过期。已向 {{email}} 发送包含新链接的邮件。请查收并使用新链接。",
-  "tokenRegeneratedNoEmail": "链接已过期。已发送新的邀请邮件。请查收并使用新链接。",
+  "tokenRegenerated": "已向 {{email}} 发送包含新链接的邮件。请查收收件箱（及垃圾邮件）并使用新链接。",
+  "tokenRegeneratedNoEmail": "已发送新的邀请邮件。请查收收件箱（及垃圾邮件）并使用新链接。",
+  "emailSentAgainTitle": "已重新发送邀请邮件",
+  "emailSentAgainLead": "您使用的链接已过期。我们已向您的邮箱重新发送邀请邮件。",
   "title": "接受邀请",
   "hello": "您好，{{name}}。",
   "emailLabel": "邮箱",
