--- a/src/shared/i18n/locales/zh-Hans/auth.json
+++ b/src/shared/i18n/locales/zh-Hans/auth.json
@@ -1,10 +1,21 @@
 {
-  "title": "登录",
+  "title": "Neusoft University",
+  "loginSubtitle": "学生门户登录",
   "email": "邮箱",
   "password": "密码",
+  "passwordPlaceholder": "请输入密码",
+  "forgotPassword": "忘记密码？",
   "submit": "登录",
   "submitting": "登录中…",
   "linkInvite": "接受邀请",
+  "demoCredentials": "演示账号：",
+  "demoStudent": "student@neusoft.edu.cn（学生）",
+  "demoTeacher": "teacher@neusoft.edu.cn（教师）",
+  "demoAdmin": "admin@neusoft.edu.cn（管理员）",
+  "demoAdminTeacher": "dr.admin@neusoft.edu.cn（管理员 + 教师）",
+  "passwordAnyValue": "密码：任意值",
+  "noAccount": "还没有账号？",
+  "contactAdmissions": "联系招生办",
   "errorInvalidCredentials": "邮箱或密码错误。",
   "errorUserNotActive": "账户未激活。请查收邮件中的激活链接。未收到？请检查垃圾邮件或联系管理员重新发送邀请。",
   "errorUserDisabled": "账户已禁用。请联系管理员。",
